Tryingg to fix broken index
It was working before

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: SteelBlue;
-  font-family: 'BioRhyme', serif;
+ 
 }
 
 #main-navbar{
@@ -66,7 +66,6 @@ h1,h2,h3,h4,h5,h6{
   margin: 0px;
   padding: 5px;
   text-align: center;
-  font-family: "Anton";
   font-family: 'BioRhyme', serif;
 
 }
